RESOLVED FIXED79575
Fix unused variable warnings in HarfBuzzShaperBase
https://bugs.webkit.org/show_bug.cgi?id=79575
Summary Fix unused variable warnings in HarfBuzzShaperBase
Adrienne Walker
Reported 2012-02-25 10:42:46 PST
Fix unused variable warnings in HarfBuzzShaperBase
Attachments
Patch (1.46 KB, patch)
2012-02-25 10:55 PST, Adrienne Walker
no flags
Use ASSERT_UNUSED (1.52 KB, patch)
2012-02-25 11:07 PST, Adrienne Walker
kling: review+
Adrienne Walker
Comment 1 2012-02-25 10:47:21 PST
This was failing on ChromiumOS builds: http://build.chromium.org/p/chromium.chromiumos/builders/ChromiumOS%20%28tegra2%29/builds/4524/steps/cbuildbot/logs/stdio --SNIP-- third_party/WebKit/Source/WebCore/platform/graphics/harfbuzz/HarfBuzzShaperBase.cpp: In function 'void WebCore::normalizeSpacesAndMirrorChars(const UChar*, UChar*, int, WebCore::HarfBuzzShaperBase::NormalizeMode)': chromeos-chrome-19.0.1053.0_alpha-r1: third_party/WebKit/Source/WebCore/platform/graphics/harfbuzz/HarfBuzzShaperBase.cpp:58:10: error: variable 'error' set but not used [-Werror=unused-but-set-variable] chromeos-chrome-19.0.1053.0_alpha-r1: cc1plus: all warnings being treated as errors --SNIP--
Adrienne Walker
Comment 2 2012-02-25 10:55:03 PST
Adrienne Walker
Comment 3 2012-02-25 11:07:44 PST
Created attachment 128875 [details] Use ASSERT_UNUSED
Adrienne Walker
Comment 4 2012-02-25 11:11:41 PST
Note You need to log in before you can comment on or make changes to this bug.