Fix unused variable warnings in HarfBuzzShaperBase https://bugs.webkit.org/show_bug.cgi?id=79575

Reviewed by Andreas Kling.

In builds where asserts are not enabled, the error variable is unused.

* platform/graphics/harfbuzz/HarfBuzzShaperBase.cpp:
(WebCore::normalizeSpacesAndMirrorChars):

Canonical link: https://commits.webkit.org/96676@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@108903 268f45cc-cd09-0410-ab3c-d52691b4dbfc